<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">云闪付</string>
    <string name="tab_home">首页</string>
    <string name="tab_promo">优惠</string>
    <string name="tab_card">卡管理</string>
    <string name="tab_fortune">财富</string>
    <string name="tab_mine">我的</string>
    <string name="city_default">上海市</string>
    <string name="search_hint">贷款财政贴息</string>
</resources>
