<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_promo"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/tab_promo" />
    <item
        android:id="@+id/nav_card"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/tab_card" />
    <item
        android:id="@+id/nav_fortune"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/tab_fortune" />
    <item
        android:id="@+id/nav_mine"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/tab_mine" />
</menu>
